src/objects/Oblix_Marketing_SOW_Project_Splits__c.object
<CustomObject>
    <description>Project Oblix - Project splits</description>
    <fields>
        <fullName>Enforce_Trigger_Update__c</fullName>
        <description>In order to enforce trigger on SWOP Campaign, there is a rollup summary field created to aggregate this field. This ensure before trigger on SWOP Campaign collects information about the children and update accordingly.</description>
        <label>Enforce Trigger Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OblixCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>MDO_Geography__c</referenceTo>
        <relationshipName>Marketing_SOW_Project_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>Agency project splits</description>
        <inlineHelpText>Enter the percentage of the project for the location the project will be executed in?</inlineHelpText>
        <label>Split Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Splits__c</fullName>
        <label>Project Splits</label>
        <referenceTo>Oblix_SOW_Projects__c</referenceTo>
        <relationshipLabel>SWOP Campaign Splits</relationshipLabel>
        <relationshipName>Marketing_SOW_Project_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SWOP Campaign Splits</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPLIT{00000}</displayFormat>
        <label>Marketing SOW Project Splits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOP Campaign Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Record_if_Sync_in_Progress</fullName>
        <active>true</active>
        <description>If a roll over Sync in Progress. Record Locked</description>
        <errorConditionFormula>IF($Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; (TEXT( Project_Splits__r.Sync_Status__c ) == &apos;Sync In Progress&apos; || Project_Splits__r.Sync_Required_NFY__c == &apos;Sync In Progress&apos; || TEXT( Project_Splits__r.Sync_Status__c ) == &apos;Sync Requested&apos; || Project_Splits__r.Sync_Required_NFY__c == &apos;Sync Requested&apos;),true,false)</errorConditionFormula>
        <errorMessage>Sync in Progress. Record Locked</errorMessage>
    </validationRules>
</CustomObject>